--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>3.5.1</version>
+            			<configuration>
+                		<source>11</source>
+                		<target>11</target>
+            			</configuration>
 			</plugin>
 		</plugins>
 	</build>
