--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 
 	<properties>
 		<java.version>11</java.version>
+		<maven-jar-plugin.version>3.8.1</maven-jar-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -93,15 +94,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<plugin>
-            			<groupId>org.apache.maven.plugins</groupId>
-            			<artifactId>maven-compiler-plugin</artifactId>
-            			<version>3.5.1</version>
-            			<configuration>
-                			<source>11</source>
-                			<target>11</target>
-            			</configuration>
-        		</plugin>
+		
 		</plugins>
 	</build>
 
