--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,7 @@
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
-		<java.version>1.8</java.version>
-		
+		<java.version>11</java.version>
 	</properties>
 
 	<dependencies>
@@ -36,6 +35,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
+		<dependency>
+    		<groupId>org.apache.commons</groupId>
+    		<artifactId>commons-csv</artifactId>
+    		<version>1.8</version>
+		</dependency>
+
+	
+		
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -44,25 +54,17 @@
 			<optional>true</optional>
 		</dependency>
 
-		<!-- <dependency> <groupId>com.h2database</groupId> <artifactId>h2</artifactId> 
-			<scope>runtime</scope> </dependency> -->
+			
 
 		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
-		</dependency>
+			<version>9.4-1206-jdbc42</version>
+		</dependency> 
 
-		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
-		<dependency>
-    			<groupId>org.projectlombok</groupId>
-    			<artifactId>lombok</artifactId>
-    			<version>1.18.16</version>
-    			<scope>provided</scope>
-		</dependency>
 
-		
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
@@ -94,8 +96,8 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-		
 		</plugins>
 	</build>
 
 </project>
+
