--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
