--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,7 @@
-server.port = 8080
-
 spring.datasource.driver-class-name = org.postgresql.Driver
-spring.datasource.url =spring.datasource.url = jdbc:postgresql://localhost:8080/test
-spring.datasource.username = username
-spring.datasource.password = password
-
-
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.format_sql=true
 
